--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <script type="text/javascript">
         window.onload = function() {
+            console.log(window.location.search.split('=')[1]);
 			window.location.href = window.location.search.split('=')[1];
         };
 </script>
