--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <meta charset="UTF-8">
 <script type="text/javascript">
         window.onload = function() {
-            console.log(window.location.search.split('=')[1]);
-			window.location.href = window.location.search.split('=')[1];
+            const params = new URLSearchParams(window.location.search);
+            const redirectUrl = params.get('redirect');
+            if (redirectUrl) {
+                window.location.href = redirectUrl;
+            }
         };
 </script>
 </head>
