--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <script type="text/javascript">
         window.onload = function() {
+            const params = new URLSearchParams(window.location.search);
             const redirectUrl = params.get('redirect');
             const sessionId = params.get('session_id'); // Capture the session_id parameter
 
