Fixed proof generation

--- a/newIndex.html
+++ b/newIndex.html
@@ -5,39 +5,176 @@
 <script type="text/javascript">
     import { buildMimcSponge } from 'https://cdn.jsdelivr.net/npm/circomlibjs@0.1.7/+esm';
     import * as ethers from "https://cdn.jsdelivr.net/npm/ethers@6.11.1/dist/ethers.min.js";
-        window.onload = async function() {
-            const params = new URLSearchParams(window.location.search);
-            const redirectUrl = params.get('redirect');
-            const sessionId = params.get('product_id'); // Capture the session_id parameter
+    import * as snarkjs from 'https://cdn.jsdelivr.net/npm/snarkjs@0.7.3/+esm'
 
-            const commitment = await generateCommitment(sessionId)
-            const text = document.createElement("p")
-            text.textContent = commitment.commitment
-            if (redirectUrl && sessionId) {
-                const deepLinkWithSessionId = `${redirectUrl}?session_id=${sessionId}`;
-                window.location.href = deepLinkWithSessionId;
-            } else if (redirectUrl) {
-                // If there's no session ID, just redirect to the original deep link
-                window.location.href = redirectUrl;
-            }
+    window.onload = async function() {
+        const params = new URLSearchParams(window.location.search);
+        const redirectUrl = params.get('redirect');
+        const prodId = params.get('prod_id'); // Capture the session_id parameter
+
+        //generates new commitments
+        const commitment = await generateCommitment(prodId)
+        const text = document.createElement("p")
+        text.textContent = commitment.commitment
+
+        const productId = params.get('productId');
+        const nullifier = params.get('nullifier');
+        const secret = params.get('secret');
+
+        const commitments = await getCommitmentsFromContract("CONTRACT_ADDRESS")
+        const proof = await generateProof(commitments, {
+            productId: productId, 
+            nullifier:nullifier, 
+            secret:secret
+        })
+
+        if (redirectUrl && sessionId) {
+            const deepLinkWithSessionId = `${redirectUrl}?session_id=${sessionId}`;
+            window.location.href = deepLinkWithSessionId;
+        } else if (redirectUrl) {
+            // If there's no session ID, just redirect to the original deep link
+            window.location.href = redirectUrl;
+        }
+    };
+
+
+    async function generateCommitment(prod_id) {
+        const mimc = await buildMimcSponge();
+        const nullifier = ethers.toBigInt(generateRandomBytes(31)).toString();
+        const secret = ethers.toBigInt(generateRandomBytes(31)).toString();
+        const preCommitment = mimc.F.toString(mimc.multiHash([nullifier, secret]));
+        const commitment = mimc.F.toString(mimc.multiHash([preCommitment, prod_id]))
+        return {
+            nullifier: nullifier,
+            secret: secret,
+            commitment: commitment,
         };
-        async function generateCommitment(prod_id) {
-            const mimc = await buildMimcSponge();
-            const nullifier = ethers.toBigInt(generateRandomBytes(31)).toString();
-            const secret = ethers.toBigInt(generateRandomBytes(31)).toString();
-            const preCommitment = mimc.F.toString(mimc.multiHash([nullifier, secret]));
-            const commitment = mimc.F.toString(mimc.multiHash([preCommitment, prod_id]))
-            return {
-                nullifier: nullifier,
-                secret: secret,
-                commitment: commitment,
-            };
+    }
+
+    async function generateProof(commitments, commitment) {
+        const commitment = commitment
+        const preCommitment = mimc.F.toString(mimc.multiHash([commitment.nullifier, commitment.secret]));
+        commitment.commitment = mimc.F.toString(mimc.multiHash([preCommitment, commitment.prod_id]))
+        const mimc = await buildMimcSponge()
+        const rootAndPath = await calculateMerkleRootAndPath(20, commitments, commitment.commitment)
+        console.log("got root and path")
+        if (!rootAndPath) {
+            console.log("not found in tree")
+            return "commitment not found in tree"
         }
-        function generateRandomBytes(length) {
-            const randomBytes = new Uint8Array(length);
-            window.crypto.getRandomValues(randomBytes);
-            return randomBytes;
+        console.log("proving...")
+        const { proof, publicSignals } = await snarkjs.groth16.fullProve(
+            {
+                nullifier: commitment.nullifier, secret: commitment.secret, productID: commitment.productId,
+                pathElements: rootAndPath.pathElements, pathIndices: rootAndPath.pathIndices
+            },
+            "https://proof-files.vercel.app/subscription.wasm",
+            "https://proof-files.vercel.app/subscription_0001.zkey"    // has to be path to zkey
+        )
+        console.log("proving success")
+        const cd = convertCallData(await snarkjs.groth16.exportSolidityCallData(proof, publicSignals));
+        const finalProof = {
+            nullifierHash: publicSignals[0],
+            root: publicSignals[1],
+            proof_a: cd.a,
+            proof_b: cd.b,
+            proof_c: cd.c
         }
+        console.log(finalProof)
+        return finalProof
+    }
+        function charCodeAt(c) {
+            return c.charCodeAt(0)
+        }
+        function toUint8Array(s) {
+            if (typeof atob === 'function') return new Uint8Array(atob(s).split('').map(charCodeAt))
+            return (require('buf' + 'fer').Buffer).from(s, 'base64')
+        }
+        function convertCallData(calldata) {
+            const argv = calldata
+                .replace(/["[\]\s]/g, "")
+                .split(",")
+                .map((x) => BigInt(x).toString());
+
+            const a = [argv[0], argv[1]];
+            const b = [
+                [argv[2], argv[3]],
+                [argv[4], argv[5]],
+            ]
+            const c = [argv[6], argv[7]]
+            const input = [argv[8], argv[9]]
+
+            return { a, b, c, input };
+        }
+
+    async function calculateMerkleRootAndPath(levels, elements, element = undefined) {
+            const capacity = 2 ** levels
+            if (elements.length > capacity) throw new Error('Tree is full')
+            const mimc = await buildMimcSponge()
+
+            let layers = []
+            layers[0] = elements.slice()
+            for (let level = 1; level <= levels; level++) {
+                layers[level] = []
+                for (let i = 0; i < Math.ceil(layers[level - 1].length / 2); i++) {
+                    layers[level][i] = mimc.F.toString(mimc.multiHash([
+                        layers[level - 1][i * 2],
+                        i * 2 + 1 < layers[level - 1].length ? layers[level - 1][i * 2 + 1] : zeros[level - 1]]))
+                }
+            }
+            // console.log(layers)
+            const root = layers[levels].length > 0 ? layers[levels][0] : zeros[levels - 1]
+            console.log("root 1: ", root)
+            let pathElements = []
+            let pathIndices = []
+
+            if (element) {
+                let index = layers[0].findIndex(e => e === element)
+                if (index === -1) {
+                    return false
+                }
+                console.log('idx: ' + index)
+                for (let level = 0; level < levels; level++) {
+                    pathIndices[level] = index % 2
+                    pathElements[level] = (index ^ 1) < layers[level].length ? layers[level][index ^ 1] : zeros[level]
+                    index >>= 1
+                }
+                return {
+                    root: root,
+                    pathElements: pathElements.map((v) => v.toString()),
+                    pathIndices: pathIndices.map((v) => v.toString())
+                }
+            }
+            return root
+        }
+    
+    async function getCommitmentsFromContract(contractAddress) {
+        const provider = new ethers.JsonRpcProvider("https://sapphire.oasis.io")
+        const abi = [
+            "event Commit(bytes32 indexed commitment,uint32 leafIndex,uint256 timestamp)"
+        ];
+        console.log("added commitment")
+        const contract = new ethers.Contract(contractAddress, abi, provider)
+        const latest = await provider.getBlockNumber()
+        const start = 3283386
+        console.log(latest)
+        let commitments = []
+        for(let i=start;i<latest;i+=100){
+            const events = await contract.queryFilter(contract.filters.Commit(), i, i+100)
+            console.log(events)
+            for (let event of events) {
+                commitments.push(ethers.toBigInt(event.args.commitment).toString())
+            }
+            // console.log(commitments)
+        }
+        console.log(commitments)
+        return commitments
+    }
+    function generateRandomBytes(length) {
+        const randomBytes = new Uint8Array(length);
+        window.crypto.getRandomValues(randomBytes);
+        return randomBytes;
+    }
 </script>
 </head>
 <body>
